add analysis script