@@ -3,7 +3,6 @@ package thinclab.executables;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -111,75 +110,6 @@ public class SimulateInteraction {
                         List.of(m.i_EC))));
     }
 
-    public static void 
-        runSimulatorSingleAgent(final PBVISolvablePOMDPBasedModel model,
-                DD s,
-                DD b_i,
-                AlphaVectorPolicy p,
-                int length) {
-
-            // prepare state and prime state indices for use later
-            var X = new ArrayList<>(model.i_S());
-            var X_p = Global.makePrimeIndices(X);
-
-            var JSON_ARRAY = Global.RESULTS_DIR == null ? null : new JsonArray();
-
-            for (int iter = 0; iter < length; iter++) {
-
-                System.out.println();
-
-                var s_factors = DDOP.factors(s, X);
-
-                // print belief
-                System.out.println("State:==");
-                s_factors.forEach(_b -> {
-                    System.out.println(_b);
-                });
-                System.out.println("====================");
-
-                // print belief of agent i
-                System.out.printf("==Belief of agent %s==\r\n", 
-                        model.getName());
-                printBeliefStats(model, b_i);
-                System.out.println("=====================");
-
-                var iAct = p.getBestActionIndex(b_i, model.i_S());
-                System.out.printf("Agent %s took action %s\r\n",
-                        model.getName(), model.A().get(iAct));
-
-                s = updateState(s, X, model.T().get(iAct));
-
-                var iObs = sampleObservations(s, model.O().get(iAct), 
-                        model.i_Om_p(), X_p);
-
-                System.out.printf("Agent %s gets observation ",
-                        model.getName());
-                printVarVals(iObs);
-
-                // Write results
-                if (Global.RESULTS_DIR != null) {
-
-                    var json = new JsonObject();
-
-                    json.addProperty("time step", iter);
-                    json.add("iBel", DDOP.toJson(b_i, model.i_S()));
-                    json.addProperty("iR", DDOP.dotProduct(
-                                model.R().get(iAct), b_i, model.i_S()));
-
-                    json.add("iObs", getVarValsJSON(iObs));
-                    json.add("state", DDOP.toJson(s, X));
-                    json.addProperty("iAct", model.A().get(iAct));
-
-                    JSON_ARRAY.add(json);
-                }
-
-                b_i = model.beliefUpdate(b_i, iAct, iObs._1());
-            }
-
-            JSON_DATA.add(JSON_ARRAY);
-
-        }
-
     public static void runSimulator(
             final IPOMDP model,
             final PBVISolvablePOMDPBasedModel jModel,
@@ -230,12 +160,12 @@ public class SimulateInteraction {
             System.out.printf("Agent %s took action %s\r\n",
                     jModel.getName(), jModel.A().get(jAct));
 
-            s = updateState(s, X, model.T().get(iAct), model.i_Aj, jAct);
+            var s_p = updateState(s, X, model.T().get(iAct), model.i_Aj, jAct);
 
-            var iObs = sampleObservations(s, model.O().get(iAct), 
+            var iObs = sampleObservations(s_p, model.O().get(iAct), 
                     model.i_Om_p(), X_p, model.i_Aj, jAct);
 
-            var jObs = sampleObservations(s, jModel.O().get(jAct), 
+            var jObs = sampleObservations(s_p, jModel.O().get(jAct), 
                     jModel.i_Om_p(), X_p, model.i_Aj, jAct);
 
             System.out.printf("Agent %s gets observation ",
@@ -298,6 +228,7 @@ public class SimulateInteraction {
 
             b_i = model.beliefUpdate(b_i, iAct, iObs._1());
             b_j = jModel.beliefUpdate(b_j, jAct, jObs._1());
+            s = s_p;
         }
 
         JSON_DATA.add(JSON_ARRAY);
@@ -313,21 +244,6 @@ public class SimulateInteraction {
             .collect(Collectors.toList());
 
         return DDOP.mult(_s);
-            }
-
-    public static DD updateState(
-            DD s,
-            List<Integer> i_S,
-            List<DD> T) {
-
-        var dds = new ArrayList<>(T);
-        dds.add(s);
-
-        var s_p = DDOP.addMultVarElim(dds, i_S);
-        s_p = DDOP.primeVars(s_p, -(Global.NUM_VARS / 2));
-
-        var nextState = DDOP.sample(List.of(s_p), i_S);
-        return ddFromVarVals(nextState);
             }
 
     public static DD updateState(
@@ -360,17 +276,6 @@ public class SimulateInteraction {
         var oDD = DDOP.addMultVarElim(o, i_S_p);
         return DDOP.sample(List.of(oDD), i_Om_p);
             }
-
-    public static Tuple<List<Integer>, List<Integer>> sampleObservations(DD s,
-            List<DD> O, List<Integer> i_Om_p, List<Integer> i_S_p) {
-
-        var s_p = DDOP.primeVars(s, (Global.NUM_VARS / 2));
-        var o = new ArrayList<>(O);
-        o.add(s_p);
-
-        var oDD = DDOP.addMultVarElim(o, i_S_p);
-        return DDOP.sample(List.of(oDD), i_Om_p);
-    }
 
     public static void main(String[] args) throws Exception {
 
@@ -405,7 +310,7 @@ public class SimulateInteraction {
         String domainFile = line.getOptionValue("d");
         String resultsDir = line.getOptionValue("r");
 
-        Global.RESULTS_DIR = Paths.get(resultsDir);
+        Global.RESULTS_DIR = Path.of(resultsDir);
         SimulateInteraction.JSON_DATA = new JsonArray();
 
         String iName = line.getOptionValue("iName");
@@ -416,128 +321,78 @@ public class SimulateInteraction {
         int l = Integer.parseInt(line.getOptionValue("l"));
         int i = Integer.parseInt(line.getOptionValue("i"));
 
-        // Single agent interaction
-        if (jName == null) {
-            var parser = new SpuddXMainParser(domainFile);
-            parser.run();
-
-            AlphaVectorPolicy p = null;
-
-            var model = (POMDP) parser.getModel(iName).orElseGet(() ->
-                    {
-                        LOGGER.error("Model %s not found", iName);
-                        System.exit(-1);
-                        return null;
-                    });
-
-            var b_i = parser.getDD(iBel);
-            var s = parser.getDD(iState);
-
-            if (line.getOptionValue("p") != null) {
-                if (line.getOptionValue("p").equals("solve"))
-                    p = new SymbolicPerseusSolver<>()
-                        .solve(List.of(b_i), 
-                                model, 100, 20, 
-                                AlphaVectorPolicy.fromR(model.R()));
-
-                else
-                    p = AlphaVectorPolicy.fromJson(
-                            Utils.readJsonFromFile(
-                                line.getOptionValue("p")));
-
-                System.out.println("Graph is:");
-                var G = PolicyGraph.makePolicyGraph(List.of(b_i), model, p);
-                System.out.println(G);
-            }
-
-            for (int n = 0; n < i; n++) {
-                System.out.printf("Running interaction %s\r\n", n);
-                SimulateInteraction.runSimulatorSingleAgent(
-                        model, s, b_i, p, l);
-            }
-
-            var gson = new GsonBuilder().setPrettyPrinting().create();
-            Files.writeString(
-                    Path.of(
-                        Global.RESULTS_DIR.toAbsolutePath().toString(), 
-                        "trace.json"), 
-                    gson.toJson(JSON_DATA));
-
-        }
 
         // Multi-agent interaction
 
-        else {
-            // Parse SPUDDX file
-            var parser = new SpuddXMainParser(domainFile);
-            parser.run();
+        // Parse SPUDDX file
+        var parser = new SpuddXMainParser(domainFile);
+        parser.run();
 
-            AlphaVectorPolicy p = null;
+        AlphaVectorPolicy p = null;
 
-            var model = (IPOMDP) parser.getModel(iName).orElseGet(() ->
-                    {
-                        LOGGER.error("Model %s not found", iName);
-                        System.exit(-1);
-                        return null;
-                    });
+        var model = (IPOMDP) parser.getModel(iName).orElseGet(() ->
+                {
+                    LOGGER.error("Model %s not found", iName);
+                    System.exit(-1);
+                    return null;
+                });
 
-            var jModel = model.framesj.stream()
-                .filter(_m -> _m._1().getName().equals(jName))
-                .findFirst()
-                .map(_m -> _m._1()).get();
+        var jModel = model.framesj.stream()
+            .filter(_m -> _m._1().getName().equals(jName))
+            .findFirst()
+            .map(_m -> _m._1()).get();
 
-            var jPolicy = model.ecThetas.stream()
-                .filter(_p -> _p.m.getName().equals(jName))
-                .findFirst()
-                .map(_p -> _p.Vn).get();
+        var jPolicy = model.ecThetas.stream()
+            .filter(_p -> _p.m.getName().equals(jName))
+            .findFirst()
+            .map(_p -> _p.Vn).get();
 
-            var b_i = parser.getDD(iBel);
-            var b_j = parser.getDD(jBel);
-            var s = parser.getDD(iState);
+        var b_i = parser.getDD(iBel);
+        var b_j = parser.getDD(jBel);
+        var s = parser.getDD(iState);
 
-            if (b_i == null) {
-                LOGGER.error("Belief DD %s does not exist", iBel);
-                System.exit(-1);
-            }
-
-            if (b_j == null) {
-                LOGGER.error("Belief DD %s does not exist", jBel);
-                System.exit(-1);
-            }
-
-            b_i = model.getECDDFromMjDD(b_i);
-            b_j = jModel instanceof IPOMDP _jModel ?
-                _jModel.getECDDFromMjDD(b_j) : b_j;
-
-            if (line.getOptionValue("p") != null) {
-                if (line.getOptionValue("p").equals("solve"))
-                    p = new SymbolicPerseusSolver<>()
-                        .solve(List.of(b_i), 
-                                model, 100, 20, 
-                                AlphaVectorPolicy.fromR(model.R()));
-
-                else
-                    p = AlphaVectorPolicy.fromJson(
-                            Utils.readJsonFromFile(
-                                line.getOptionValue("p")));
-
-                System.out.println("Graph is:");
-                var G = PolicyGraph.makePolicyGraph(List.of(b_i), model, p);
-                System.out.println(G);
-            }
-
-            for (int n = 0; n < i; n++) {
-                System.out.printf("Running interaction %s\r\n", n);
-                SimulateInteraction.runSimulator(
-                        model, jModel, s, b_i, b_j, p, jPolicy, l);
-            }
-
-            var gson = new GsonBuilder().setPrettyPrinting().create();
-            Files.writeString(
-                    Path.of(
-                        Global.RESULTS_DIR.toAbsolutePath().toString(), 
-                        "trace.json"), 
-                    gson.toJson(JSON_DATA));
+        if (b_i == null) {
+            LOGGER.error("Belief DD %s does not exist", iBel);
+            System.exit(-1);
         }
+
+        if (b_j == null) {
+            LOGGER.error("Belief DD %s does not exist", jBel);
+            System.exit(-1);
+        }
+
+        b_i = model.getECDDFromMjDD(b_i);
+        b_j = jModel instanceof IPOMDP _jModel ?
+            _jModel.getECDDFromMjDD(b_j) : b_j;
+
+        if (line.getOptionValue("p") != null) {
+            if (line.getOptionValue("p").equals("solve"))
+                p = new SymbolicPerseusSolver<>()
+                    .solve(List.of(b_i), 
+                            model, 100, 20, 
+                            AlphaVectorPolicy.fromR(model.R()));
+
+            else
+                p = AlphaVectorPolicy.fromJson(
+                        Utils.readJsonFromFile(
+                            line.getOptionValue("p")));
+
+            System.out.println("Graph is:");
+            var G = PolicyGraph.makePolicyGraph(List.of(b_i), model, p);
+            System.out.println(G);
+        }
+
+        for (int n = 0; n < i; n++) {
+            System.out.printf("Running interaction %s\r\n", n);
+            SimulateInteraction.runSimulator(
+                    model, jModel, s, b_i, b_j, p, jPolicy, l);
+        }
+
+        var gson = new GsonBuilder().setPrettyPrinting().create();
+        Files.writeString(
+                Path.of(
+                    Global.RESULTS_DIR.toAbsolutePath().toString(), 
+                    "trace.json"), 
+                gson.toJson(JSON_DATA));
     }
 }
